--- a/templates/knowledge/listView.html
+++ b/templates/knowledge/listView.html
@@ -17,8 +17,37 @@
         <button class="layui-btn" onclick="location.search();"><i class="layui-icon layui-icon-search"></i>搜索</button>
 {#        <span class="x-right" style="line-height:40px">共有数据：<font id="total">{{ pagination.total }}</font> 条</span>#}
     </xblock>
+    <div class="layui-form">
+        <table class="layui-table">
+            <colgroup>
+                <col width="150">
+                <col width="150">
+                <col width="200">
+                <col>
+            </colgroup>
+            <thead>
+            <tr>
+                <th>问题</th>
+                <th>答案</th>
+                <th>操作</th>
+            </tr>
+            </thead>
+            <tbody>
+            {% for user in infos %}
+                <tr>
+                    <td>{{ user.id }}</td>
+                    <td>{{ user.userName }}</td>
+                    <td>
+                        <a title="编辑" class="layui-btn layui-btn-normal layui-btn-xs" onclick="editItem({{ user.id }})">编辑</a>
+                        <a title="删除" onclick="deleteItem(this,{{ user.id }})"
+                           class="layui-btn layui-btn-danger layui-btn-xs">删除</a>
+                    </td>
+                </tr>
+            {% endfor %}
+            </tbody>
+        </table>
+    </div>
 </div>
-
 </body>
 </html>
 
